SERVER-48527 Aborting in-progress transactions on step-up should clear session state before returning